[gd_scene load_steps=3 format=3 uid="uid://d1sqhrx03pndw"]

[ext_resource type="Texture2D" uid="uid://ojq4ejib6mii" path="res://assets/controller_test/controller_p2.png" id="1_0gmr0"]
[ext_resource type="Script" uid="uid://c7qr8w46hdi28" path="res://scripts/menu/controller_test/p2_texture.gd" id="2_5bbwf"]

[node name="P2Texture" type="TextureRect"]
texture_filter = 1
texture = ExtResource("1_0gmr0")
script = ExtResource("2_5bbwf")

[node name="B1Pressed" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_left = 42.0
offset_top = 107.0
offset_right = 59.0
offset_bottom = 137.0

[node name="B2Pressed" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_left = 63.0
offset_top = 59.0
offset_right = 80.0
offset_bottom = 89.0

[node name="B3Pressed" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_left = 82.0
offset_top = 107.0
offset_right = 99.0
offset_bottom = 137.0

[node name="B4Pressed" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_left = 103.0
offset_top = 59.0
offset_right = 120.0
offset_bottom = 89.0

[node name="B5Pressed" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_left = 123.0
offset_top = 107.0
offset_right = 140.0
offset_bottom = 137.0

[node name="B6Pressed" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_left = 144.0
offset_top = 59.0
offset_right = 161.0
offset_bottom = 89.0

[node name="B7Pressed" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_left = 163.0
offset_top = 107.0
offset_right = 180.0
offset_bottom = 137.0

[node name="E1Pressed" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_left = 171.0
offset_top = 13.0
offset_right = 176.0
offset_bottom = 18.0

[node name="E2Pressed" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_left = 190.0
offset_top = 13.0
offset_right = 195.0
offset_bottom = 18.0

[node name="E3Pressed" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_left = 209.0
offset_top = 13.0
offset_right = 214.0
offset_bottom = 18.0

[node name="E4Pressed" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_left = 228.0
offset_top = 13.0
offset_right = 233.0
offset_bottom = 18.0

[node name="Turntable" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 350.0
offset_top = 30.0
offset_right = 354.0
offset_bottom = 161.0
pivot_offset = Vector2(2, 66)

[node name="Turntable2" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_left = 302.0
offset_top = 64.0
offset_right = 306.0
offset_bottom = 80.0

[node name="Turntable3" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_left = 302.0
offset_top = 112.0
offset_right = 306.0
offset_bottom = 128.0
